--- a/test-output/old/NopCommerce/methods.html
+++ b/test-output/old/NopCommerce/methods.html
@@ -1,20 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f7dcf">  <td>22/10/03 22:25:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_03_User_02_Login_Use_Page_Obj.beforeClass()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1878169648</td>   <td></td> </tr>
-<tr bgcolor="9f7dcf">  <td>22/10/03 22:26:05</td>   <td>7928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_02_Login_Use_Page_Obj.Login_01_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">Login_01_Empty_Data</td> 
-  <td>main@1878169648</td>   <td></td> </tr>
-<tr bgcolor="9f7dcf">  <td>22/10/03 22:26:05</td>   <td>8718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_02_Login_Use_Page_Obj.Login_02_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">Login_02_Invalid_Email</td> 
-  <td>main@1878169648</td>   <td></td> </tr>
-<tr bgcolor="9f7dcf">  <td>22/10/03 22:26:06</td>   <td>9382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_02_Login_Use_Page_Obj.Login_03_Not_Found_Email()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">Login_03_Not_Found_Email</td> 
-  <td>main@1878169648</td>   <td></td> </tr>
-<tr bgcolor="9f7dcf">  <td>22/10/03 22:26:07</td>   <td>10174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_02_Login_Use_Page_Obj.Login_04_Existing_Email_Empty_Password()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">Login_04_Existing_Email_Empty_Password</td> 
-  <td>main@1878169648</td>   <td></td> </tr>
-<tr bgcolor="9f7dcf">  <td>22/10/03 22:26:08</td>   <td>10988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_02_Login_Use_Page_Obj.Login_05_Existing_Email_Wrong_Password()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">Login_05_Existing_Email_Wrong_Password</td> 
-  <td>main@1878169648</td>   <td></td> </tr>
-<tr bgcolor="9f7dcf">  <td>22/10/03 22:26:08</td>   <td>11763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_02_Login_Use_Page_Obj.Login_06_Valid_Email_Password()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">Login_06_Valid_Email_Password</td> 
-  <td>main@1878169648</td>   <td></td> </tr>
-<tr bgcolor="9f7dcf">  <td>22/10/03 22:26:09</td>   <td>12889</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_03_User_02_Login_Use_Page_Obj.afterClass()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1878169648</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:19:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_04_Multi_Browser.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@6ad82709]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:19:45</td>   <td>6098</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_04_Multi_Browser.Login_01_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@6ad82709]">Login_01_Empty_Data</td> 
+  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:19:46</td>   <td>6959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_04_Multi_Browser.Login_02_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@6ad82709]">Login_02_Invalid_Email</td> 
+  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:19:46</td>   <td>7626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_04_Multi_Browser.Login_03_Not_Found_Email()[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@6ad82709]">Login_03_Not_Found_Email</td> 
+  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:19:47</td>   <td>8431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_04_Multi_Browser.Login_04_Existing_Email_Empty_Password()[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@6ad82709]">Login_04_Existing_Email_Empty_Password</td> 
+  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:19:48</td>   <td>9266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_04_Multi_Browser.Login_05_Existing_Email_Wrong_Password()[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@6ad82709]">Login_05_Existing_Email_Wrong_Password</td> 
+  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:19:49</td>   <td>10077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_04_Multi_Browser.Login_06_Valid_Email_Password()[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@6ad82709]">Login_06_Valid_Email_Password</td> 
+  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:19:50</td>   <td>11185</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_04_Multi_Browser.afterClass()[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@6ad82709]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:19:51</td>   <td>11844</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_04_Multi_Browser.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@13b6aecc]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:20:03</td>   <td>23970</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_04_Multi_Browser.Login_01_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@13b6aecc]">Login_01_Empty_Data</td> 
+  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:20:03</td>   <td>24690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_04_Multi_Browser.Login_02_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@13b6aecc]">Login_02_Invalid_Email</td> 
+  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:20:04</td>   <td>25230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_04_Multi_Browser.Login_03_Not_Found_Email()[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@13b6aecc]">Login_03_Not_Found_Email</td> 
+  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:20:05</td>   <td>26056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_04_Multi_Browser.Login_04_Existing_Email_Empty_Password()[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@13b6aecc]">Login_04_Existing_Email_Empty_Password</td> 
+  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:20:06</td>   <td>26952</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_04_Multi_Browser.Login_05_Existing_Email_Wrong_Password()[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@13b6aecc]">Login_05_Existing_Email_Wrong_Password</td> 
+  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:20:07</td>   <td>27866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_04_Multi_Browser.Login_06_Valid_Email_Password()[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@13b6aecc]">Login_06_Valid_Email_Password</td> 
+  <td>main@1443435931</td>   <td></td> </tr>
+<tr bgcolor="bdafdd">  <td>22/10/05 21:20:08</td>   <td>29094</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_04_Multi_Browser.afterClass()[pri:0, instance:com.nopcommerce.user.Level_04_Multi_Browser@13b6aecc]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1443435931</td>   <td></td> </tr>
 </table>
