--- a/test-output/old/NopCommerce/toc.html
+++ b/test-output/old/NopCommerce/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>NopCommerce</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>1 test</td>
+<td>2 tests</td>
 <td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<td>6 methods:<br/>
+<td>12 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -22,8 +22,16 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Run on Firefox (6/0/0)</td><td valign='top' align='right'>
-  <a href='Run on Firefox.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Run on HeadLess Chrome (6/0/0)</td><td valign='top' align='right'>
+  <a href='Run on HeadLess Chrome.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Run on HeadLess Firefox (6/0/0)</td><td valign='top' align='right'>
+  <a href='Run on HeadLess Firefox.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
